implementation of BigDecimal for currencies